# tm-secret-enclave

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  build.rs  cbindgen.toml  go.mod  lib.go
api/: bindings.h  lib.go  lib_mock.go  link_std.go  memory.go
cmd/: main.go
src/: lib.rs
src/enclave/: consts.rs  enclave_api.rs  functions.rs  init.rs  mod.rs  types.rs
src/error/: go.rs  mod.rs  rust.rs
