[package]
name = "random-api"
version = "0.0.1"
authors = ["SCRT Labs <info@scrtlabs.com>"]
edition = "2018"
description = "Go bindings for tendermint randomness"
repository = ""
license = ""
readme = "README.md"
exclude = [".gitignore"]

[lib]
crate-type = ["cdylib", "lib"]

[features]
production = []
## the example is to allow us to compile a muslc static lib with the same codebase as we compile the
## normal dynamic libs (best workaround I could find to override crate-type on the command line)
#[[example]]
#name = "muslc"
#path = "src/lib.rs"
#crate-type = ["staticlib"]

# for compatability
light-client-validation = []
random = []
verify-validator-whitelist = []

[dependencies]
errno = "0.2"
snafu = "0.7.3"
serde_json = "1.0"
ctor = "0.1.13"
simple_logger = { version = "4.0.0", default-features = false, features = ["stderr"] }
log = "0.4.17"

sgx_types = { path = "deps/incubator-teaclave-sgx-sdk/sgx_types" }
sgx_urts = { path = "deps/incubator-teaclave-sgx-sdk/sgx_urts" }

[dev-dependencies]
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
tempfile = "3.1.0"

[build-dependencies]
cbindgen = { version = "0.24.3" }
sgx_edl = { path = "deps/incubator-teaclave-sgx-sdk/sgx_edl" }

[profile.release]
opt-level = 3
debug = false
rpath = true
lto = false
debug-assertions = false
codegen-units = 16
panic = 'unwind'
incremental = true
overflow-checks = true
